[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiounifiaccess"
version = "0.2.2"
description = "Async Python client for the UniFi Access API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.9,<4",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "aresponses>=3",
    "pytest-cov>=6",
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]
docs = [
    "sphinx>=7",
    "sphinx-rtd-theme>=2",
    "sphinx-autodoc-typehints>=2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aiounifiaccess --cov-report=term-missing"

[tool.coverage.run]
source = ["aiounifiaccess"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
